# stylescrape

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  pyproject.toml
devtools/: auth0-com.md  clerk-com.md  cloudflare-com.md  datadoghq-com.md  fly-io.md  github-com.md  gitlab-com.md  index.md  linear-app.md  mongodb-com.md  neon-tech.md  netlify-com.md  planetscale-com.md  railway-app.md  redis-io.md  render-com.md  sentry-io.md  stripe-com.md  supabase-com.md  twilio-com.md  vercel-com.md
incident-response/: atlassian-com.md  betterstack-com.md  grafana-com.md  incident-io.md  index.md  pagerduty-com.md  rootly-com.md  splunk-com.md  squadcast-com.md  xmatters-com.md
itsm/: atlassian-com.md  bmc-com.md  freshworks-com.md  haloitsm-com.md  index.md  ivanti-com.md  manageengine-com.md  servicenow-com.md  solarwinds-com.md  sysaid-com.md  topdesk-com.md
observability/: chronosphere-io.md  dynatrace-com.md  elastic-co.md  grafana-com.md  honeycomb-io.md  index.md  lightstep-com.md  newrelic-com.md  splunk-com.md  sumologic-com.md
src/stylescrape/: __init__.py  aggregator.py  batch.py  cli.py  component_detector.py  discovery.py  inspector.py  prompt_builder.py  renderer.py  types.py
src/stylescrape/templates/: design_prompt.j2  markdown.j2  personality.j2
tests/: test_aggregator.py  test_batch.py  test_cli.py  test_component_detector.py  test_discovery.py  test_prompt_builder.py
