[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stylescrape"
version = "0.3.0"
description = "Reverse-engineer web design systems into Claude prompts"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Justyn Roberts", email = "justynroberts@gmail.com" }]
keywords = ["design-system", "playwright", "claude", "cli", "scraping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "playwright>=1.40",
    "jinja2>=3.1",
    "rich>=13.0",
    "click>=8.1",
    "colormath2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.5",
]

[project.scripts]
stylescrape = "stylescrape.cli:main"

[project.urls]
Homepage = "https://github.com/justynroberts/stylescrape"
Repository = "https://github.com/justynroberts/stylescrape"
Issues = "https://github.com/justynroberts/stylescrape/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/stylescrape"]

[tool.hatch.build.targets.wheel.shared-data]
"src/stylescrape/templates" = "stylescrape/templates"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
